--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npm run lint && mocha -r ts-node/register tests/**/*.spec.ts",
     "build": "rollup -c",
+    "bench": "node bench/index.js",
     "lint": "eslint tests/* src/* --ext .ts",
     "min": "terser --compress --mangle -o fcf.min.js -- fcf.js",
     "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" npm run test",
@@ -26,6 +27,7 @@
     "@types/node": "^14.0.1",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
+    "benchmark": "^2.1.4",
     "chai": "^4.2.0",
     "eslint": "^7.0.0",
     "mocha": "^7.1.2",
