--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint tests/* src/* --ext .ts",
     "min": "terser --compress --mangle -o fcf.min.js -- fcf.js",
     "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" npm run test",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "cov-html": "nyc report -r html",
     "prepublishOnly": "npm run test && npm run build && npm run min"
   },
@@ -25,7 +25,7 @@
     "@rollup/plugin-typescript": "^4.1.1",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
-    "@types/node": "^14.0.1",
+    "@types/node": "^14.0.3",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "benchmark": "^2.1.4",
@@ -34,7 +34,7 @@
     "eslint": "^7.0.0",
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
-    "rollup": "^2.10.3",
+    "rollup": "^2.10.4",
     "terser": "^4.7.0",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.2"
